SD-3053 fix icon position on mobile devices

--- a/assets/css/p2.scss
+++ b/assets/css/p2.scss
@@ -1488,6 +1488,11 @@ form > table.pricing-second {
     }
   }
 }
+@media (max-width: 997px) and (min-width: 768px) {
+  .os-label__wrapper {
+    margin-left: 14%;
+  }
+}
 @media (max-width: 768px) {
   .ft-table__item {
     margin-bottom: 5px;
